[package]
name = "chaos-handler"
version = "0.0.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.12.3", features = ["min_const_generics"] }
once_cell = "1.16.0"
windows = { version = "0.43.0", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }
